K8s/front-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: frontend-app
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
      nodePort: 30150
